--- a/ajax1.html
+++ b/ajax1.html
@@ -6,8 +6,19 @@
 </head>
 <body>
     <hr>
-    <button onclick="button_click()">SEND AJAX</button>
+    <button onclick="button_click()">SEND AJAX to jsonplaceholder.typicode.com/users/1</button>
     <script>
+
+        // 1
+        // open this url in GET in postman
+        //          https://randomuser.me/api/
+        // 2        
+        // add another button
+        // when clicking on it -- fire AJAX to this url:
+        //           https://randomuser.me/api/
+        // document.write the result
+        // 3
+        // get the url from the user inside input type text
 
         function button_click() {
 
